# cave

./: .gitignore  Justfile  editor.entitlements
blender/: AID.blend  Backpack.blend  Bottle.blend  Cargo.blend  Diamond.blend  Mr A.blend  Oxygen Bottle.blend  Torch.blend
blender/Canned Salmon/: Canned Salmon Texture.psd  Canned Salmon.blend  Canned Salmon.blend1
blender/First AID/: AID.blend
godot/: .gdextension  .gitignore  Cursor.png.import  PlaceholderTile.jpg.import  cave.gdextension  cave.gdextension.uid  doggo_1.svg.import  icon.svg.import  project.godot  sprite_2d.tscn
godot/models/: AID.glb  Backpack.glb  Bottle.glb  Cargo.glb  Diamond.glb  Mr A Exporting.glb  Mr A Exporting.glb.import  Mr A.glb  Mr A.glb.import  Oxygen Bottle.glb  Torch.glb
godot/scenes/: hud.tscn  player.tscn  setting_overlay.tscn  testing.tscn  testing_game.tscn  testing_world.tscn
rust/: .gitignore  Cargo.toml
rust/src/: game.rs  hud.rs  lib.rs  player.rs  setting.rs  setting_overlay.rs
