[package]
name = "cave"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
godot = { git = "https://github.com/godot-rust/gdext.git", branch = "master", features = ["experimental-wasm", "lazy-function-tables"] }
snafu = "0.8.9"

[lib]
crate-type = ["cdylib"]
